fixing minor css alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -49,11 +49,19 @@
 }
 
 .barista {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   flex: 1 1 0;
   width: 0;
 }
 
 .coffee-counter {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   flex: 1 1 0;
   width: 0;
 }
